--- a/index.html
+++ b/index.html
@@ -85,13 +85,14 @@
           <br>
           <a class="button button-linkedin" href="https://www.linkedin.com/in/vfondevilla/"><img class="icon" src="icons/linkedin.svg">LinkedIn</a>
           <br>
+          <a class="button button-telegram" href="https://fondevilla.io/document.pdf"><img class="icon" src="icons/resume.svg">My CV</a></p>
+          <br>
         <a class="small button-twitter" href="https://twitter.com/vfondevilla"><img class="icon" src="icons/twitter.svg"></a> 
         <a class="small button-github" href="https://github.com/vfondevilla"><img class="icon" src="icons/github.svg"></a> 
         <a class="small button-github" href="https://www.linkedin.com/in/vfondevilla/"><img class="icon" src="icons/linkedin.svg"></a>
         <br>
 
         </div>
-          
       </div>
     </div>
   </div>
